[tool.poetry]
name = "malwarebazaar"
version = "0.1.6"
description = "CLI wrapper for malware bazaar API (bazaar.abuse.ch)"
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License"
]
homepage = "https://github.com/3c7/bazaar"
repository = "https://github.com/3c7/bazaar"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
requests = "^2.28.1"
PyYAML = "^6.0"
pyzipper = "^0.3.6"
rich = { version = "^12.6.0", optional = true }
click = { version = "^8.1.3", optional = true }

[tool.poetry.dev-dependencies]
pyinstaller = "^5.5"
black = "^22.10.0"
mypy = "^0.982"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11.2"

[tool.poetry.extras]
cli = ["rich", "click"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bazaar = "malwarebazaar.bazaar:cli"
