[tool.poetry]
name = "malwarebazaar"
version = "0.2.3"
description = "CLI wrapper for malware bazaar API (bazaar.abuse.ch) and YARAify API (yaraify.abuse.ch)"
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License"
]
homepage = "https://github.com/3c7/bazaar"
repository = "https://github.com/3c7/bazaar"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
requests = "^2.31.0"
PyYAML = "^6.0.1"
pyzipper = "^0.3.6"
rich = { version = "^13.6.0", optional = true }
typer = { version = "^0.9.0", optional = true }
pydantic = "^2.4.2"

[tool.poetry.extras]
cli = ["rich", "click", "typer"]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
black = "^23.9.1"
types-PyYAML = "^6.0.12.12"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bazaar = "malwarebazaar.bazaar:bazaar_app"
yaraify = "malwarebazaar.yaraify:yaraify_app"
